[wip] Allow other plugins contribute to Staging view context menus
1) Propagate File adapter for StagingEntries
2) Allow platform extent context menus

TODO
1) The selection provider is hardcoded to the unstaged viewer. This
confuses contributions to the staged area menu. We must not allow
simultaneous selection in both staged and unstaged areas and set common
selection provider.
2) Now after contributions are allowed we see meaningless entries for
the staged/unstaged entries. We should make them more clever or hide
them.


Change-Id: I626a73ccf57347e0064fcbd0c642f4e0ba98fe5a
Signed-off-by: Andrey Loskutov <loskutov@gmx.de>

--- a/org.eclipse.egit.ui/plugin.xml
+++ b/org.eclipse.egit.ui/plugin.xml
@@ -309,6 +309,7 @@
          <adapter type="org.eclipse.core.resources.IResource"/>
          <adapter type="org.eclipse.core.runtime.IPath"/>
          <adapter type="org.eclipse.jgit.lib.Repository"/>
+         <adapter type="java.util.File"/>
       </factory>
    </extension>
 
