Introduce new resource properties
New testable properties isStaged, isIgnored, and hasUnstagedChages.

Bug: 355809
Change-Id: I35c46c378455e5f93aadf346dd29826aad3b085d
Signed-off-by: Thomas Wolf <thomas.wolf@paranor.ch>

--- a/org.eclipse.egit.ui/plugin.xml
+++ b/org.eclipse.egit.ui/plugin.xml
@@ -5218,7 +5218,7 @@
             class="org.eclipse.egit.ui.internal.ResourcePropertyTester"
             id="org.eclipse.egit.ui.ResourceTester"
             namespace="GitResource"
-            properties="isShared,isContainer,isSafe,canCommit,canAmend,canResetHead,canAbortRebase,canContinueRebase,hasGerritConfiguration"
+            properties="isShared,isContainer,isSafe,canCommit,canAmend,canResetHead,canAbortRebase,canContinueRebase,hasGerritConfiguration,isStaged,isIgnored,hasUnstagedChanges"
             type="org.eclipse.core.resources.IResource">
       </propertyTester>
       <propertyTester
