Show 'Add to Index' and related team menu entries only when applicable
Change the menu configurations for 'Add to Index', 'Remove from Index',
and 'Ignore' from deprecated action to command/handler and a
menuContribution. Provide visibleWhen and activeWhen specifications
using the new properties isStaged, isIgnored, and hasUnstagedChanges.

Bug: 355809
Change-Id: I35176f8ee77264c334d2c7d9b4333f4dd67fb458
Signed-off-by: Thomas Wolf <thomas.wolf@paranor.ch>

--- a/org.eclipse.egit.ui/plugin.xml
+++ b/org.eclipse.egit.ui/plugin.xml
@@ -84,27 +84,6 @@
                menubarPath="compareWithMenu/gitCompareWithGroup2">
          </action>
          <action
-               class="org.eclipse.egit.ui.internal.actions.IgnoreAction"
-               definitionId="org.eclipse.egit.ui.team.Ignore"
-               icon="$nl$/icons/obj16/ignore.gif"
-               id="org.eclipse.egit.ui.internal.actions.IgnoreAction"
-               label="%IgnoreAction_label"
-               menubarPath="team.main/group8"/>
-         <action
-               class="org.eclipse.egit.ui.internal.actions.RemoveFromIndexAction"
-               definitionId="org.eclipse.egit.ui.team.RemoveFromIndex"
-               icon="$nl$/icons/obj16/unstage.gif"
-               id="org.eclipse.egit.ui.internal.actions.RemoveFromIndexAction"
-               label="%RemoveFromIndexAction_label"
-               menubarPath="team.main/group8"/>
-         <action
-               class="org.eclipse.egit.ui.internal.actions.AddToIndexAction"
-               definitionId="org.eclipse.egit.ui.team.AddToIndex"
-               icon="$nl$/icons/obj16/add.gif"
-               id="org.eclipse.egit.ui.internal.actions.AddToIndexAction"
-               label="%AddToIndexAction_label"
-               menubarPath="team.main/group8"/>
-         <action
                class="org.eclipse.egit.ui.internal.actions.ReplaceWithPreviousAction"
                enablesFor="1"
                id="org.eclipse.egit.ui.internal.actions.ReplaceWithPreviousAction"
@@ -4393,6 +4372,72 @@
       </menuContribution>
       <menuContribution
             allPopups="false"
+            locationURI="popup:team.main?after=group8">
+         <command
+               commandId="org.eclipse.egit.ui.team.AddToIndex"
+               label="%AddToIndexAction_label"
+               style="push">
+            <visibleWhen
+                  checkEnabled="false">
+               <and>
+                  <test
+                        property="GitSelection.resourcesSingleRepository">
+                  </test>
+                  <iterate
+                        ifEmpty="false"
+                        operator="or">
+                     <test
+                           property="GitResource.hasUnstagedChanges">
+                     </test>
+                   </iterate>
+               </and>
+            </visibleWhen>
+         </command>
+         <command
+               commandId="org.eclipse.egit.ui.team.RemoveFromIndex"
+               label="%RemoveFromIndexAction_label"
+               style="push">
+            <visibleWhen
+                  checkEnabled="false">
+               <and>
+                  <test
+                        property="GitSelection.resourcesSingleRepository">
+                  </test>
+                  <iterate
+                        ifEmpty="false"
+                        operator="or">
+                     <test
+                           property="GitResource.isStaged">
+                     </test>
+                  </iterate>
+               </and>
+            </visibleWhen>
+         </command>
+         <command
+               commandId="org.eclipse.egit.ui.team.Ignore"
+               label="%IgnoreAction_label"
+               style="push">
+            <visibleWhen
+                  checkEnabled="false">
+               <and>
+                  <test
+                        property="GitSelection.resourcesSingleRepository">
+                  </test>
+                  <iterate
+                        ifEmpty="false"
+                        operator="or">
+                     <not>
+                        <test
+                              property="GitResource.isIgnored">
+                        </test>
+                     </not>
+                  </iterate>
+               </and>
+            </visibleWhen>
+         </command>
+      </menuContribution>
+      <menuContribution
+            allPopups="false"
             locationURI="popup:compareWithMenu?after=gitCompareWithGroup">
          <command
                commandId="org.eclipse.egit.ui.team.CompareIndexWithHead"
@@ -5071,6 +5116,10 @@
       <image
             commandId="org.eclipse.egit.ui.team.AddToIndex"
             icon="icons/obj16/add.gif">
+      </image>
+      <image
+            commandId="org.eclipse.egit.ui.team.RemoveFromIndex"
+            icon="icons/obj16/unstage.gif">
       </image>
       <image
             commandId="org.eclipse.egit.ui.team.Branch"
