Fix 'Init Git Flow' appearing when it shouldn't
The menu entry in the team menu was visible on closed projects, or also
on projects not shared with git at all.

Bug: 476821
Change-Id: I32368c95ae4be0975ca5860a25763cc30c20095b
Signed-off-by: Thomas Wolf <thomas.wolf@paranor.ch>

--- a/org.eclipse.egit.gitflow.ui/plugin.xml
+++ b/org.eclipse.egit.gitflow.ui/plugin.xml
@@ -25,16 +25,14 @@
 					<iterate
 							ifEmpty="false"
 							operator="and">
-						<and>
+						<adapt type="org.eclipse.jgit.lib.Repository">
 							<not>
-								<adapt type="org.eclipse.jgit.lib.Repository">
-									<test
-											forcePluginActivation="true"
-											property="GitFlowRepository.isInitialized">
-									</test>
-								</adapt>
+								<test
+										forcePluginActivation="true"
+										property="GitFlowRepository.isInitialized">
+								</test>
 							</not>
-						</and>
+						</adapt>
 					</iterate>
 				</visibleWhen>
 			</command>
@@ -202,22 +200,22 @@
 					</or>
 				</iterate>
 			</activeWhen>
-			<enabledWhen>
+			<!-- <enabledWhen>
 				<iterate
 						ifEmpty="false"
 						operator="and">
 					<and>
-						<not>
-							<adapt type="org.eclipse.jgit.lib.Repository">
+						<adapt type="org.eclipse.jgit.lib.Repository">
+							<not>
 								<test
 										forcePluginActivation="true"
 										property="GitFlowRepository.isInitialized">
 								</test>
-							</adapt>
-						</not>
+							</not>
+						</adapt>
 					</and>
 				</iterate>
-			</enabledWhen>
+			</enabledWhen>-->
 		</handler>
 		<handler
 				commandId="org.eclipse.egit.gitflow.ui.command.featureStart">
@@ -606,9 +604,9 @@
 				<instanceof
 						value="org.eclipse.egit.ui.internal.repository.tree.RepositoryTreeNode">
 				</instanceof>
-				<instanceof
-						value="org.eclipse.core.resources.IResource">
-				</instanceof>
+				<adapt
+						type="org.eclipse.core.resources.IResource">
+				</adapt>
 			</or>
 		</definition>
 	</extension>
@@ -618,9 +616,6 @@
 				class="org.eclipse.egit.gitflow.ui.internal.factories.GitFlowAdapterFactory">
 			<adapter type="org.eclipse.jgit.lib.Repository"/>
 		</factory>
-	</extension>
-	<extension
-			point="org.eclipse.core.runtime.adapters">
 		<factory adaptableType="org.eclipse.team.ui.history.IHistoryView"
 				class="org.eclipse.egit.gitflow.ui.internal.factories.GitFlowAdapterFactory">
 			<adapter type="org.eclipse.jgit.lib.Repository"/>
@@ -735,19 +730,16 @@
 					<iterate
 							ifEmpty="false"
 							operator="and">
-						<and>
-							<instanceof
-									value="org.eclipse.core.resources.IProject">
-							</instanceof>
-							<not>
-								<adapt type="org.eclipse.jgit.lib.Repository">
+						<adapt type="org.eclipse.core.resources.IProject">
+							<adapt type="org.eclipse.jgit.lib.Repository">
+								<not>
 									<test
 											forcePluginActivation="true"
 											property="GitFlowRepository.isInitialized">
 									</test>
-								</adapt>
-							</not>
-						</and>
+								</not>
+							</adapt>
+						</adapt>
 					</iterate>
 				</visibleWhen>
 			</command>
