--- a/org.eclipse.egit/pom.xml
+++ b/org.eclipse.egit/pom.xml
@@ -16,7 +16,7 @@
   <parent>
     <groupId>org.eclipse.egit</groupId>
     <artifactId>egit-parent</artifactId>
-    <version>4.2.0-SNAPSHOT</version>
+    <version>4.2.0.201512141825-rc1</version>
   </parent>
 
   <artifactId>org.eclipse.egit</artifactId>
