[WIP] Test infrastructure
Two goals:

* enable console logging for all tests
* (later) see if I can get screenshots for failing UI tests

I'm not in the mood to set up a local infrastructure
to test this all on my machine. So I'll test directly
on the EGit Hudson instance.

Builds are expected to fail. EasymportWizardTest will
throw an NPE.

Change-Id: Ide0acdf137a9b3cf1fe905053c92b6583219f872
Signed-off-by: Thomas Wolf <thomas.wolf@paranor.ch>

--- a/org.eclipse.egit.ui.importer.tests/pom.xml
+++ b/org.eclipse.egit.ui.importer.tests/pom.xml
@@ -29,6 +29,18 @@
 				<ui.test.vmargs>${uitest.vmparams} -XstartOnFirstThread</ui.test.vmargs>
 			</properties>
 		</profile>
+		<profile>
+			<id>other-os</id>
+			<activation>
+				<os>
+					<name>not-mac</name>
+					<family>!mac</family>
+				</os>
+			</activation>
+			<properties>
+				<ui.test.vmargs>${test.vmparams} ${uitest.vmparams}</ui.test.vmargs>
+			</properties>
+		</profile>
 	</profiles>
 
 	<build>
